--- a/For_Power/scenarios3/02_More_undeads.cfg
+++ b/For_Power/scenarios3/02_More_undeads.cfg
@@ -13,6 +13,14 @@
   [/unit]
 #enddef
 
+#define SET_TERRAIN X Y TYPE
+  [terrain]
+    terrain={TYPE}
+    x={X}
+    y={Y}
+  [/terrain]
+#enddef
+
 [scenario]
 	id=02_More_undeads
 	name=_"More undeads"
@@ -73,6 +81,9 @@
     name=_"Yswniver"
 	  gender=female
 	  canrecruit=yes
+    [variables]
+      unredeemable=yes
+    [/variables]
 	  
 	  recruit=Soulless
 	  
@@ -251,6 +262,71 @@
   [/event]
   
   [event]
+    name=recruit
+    first_time_only=no
+    [filter]
+      type=Soulless
+    [/filter]
+    [filter_second]
+      id=necro
+    [/filter_second]
+    [set_variable]
+      name=strength
+      rand=1..3
+    [/set_variable]
+    [switch]
+      variable=strength
+      [case]
+        value=1
+        [object]
+          silent=yes
+		      [filter]
+		        x,y=$x1,$y1
+		      [/filter]
+		      [effect]
+            apply_to=hitpoints
+            increase_total=12
+            heal_full=yes
+          [/effect]
+		    [/object]
+      [/case]
+      [case]
+        value=2
+        [object]
+          silent=yes
+		      [filter]
+		        x,y=$x1,$y1
+		      [/filter]
+		      [effect]
+            apply_to=resistance
+            replace=no
+            [resistance]
+              blade=-25
+              pierce=-25
+              impact=-20
+            [/resistance]
+          [/effect]
+		    [/object]
+      [/case]
+      [case]
+        value=3
+        [object]
+          silent=yes
+		      [filter]
+		        x,y=$x1,$y1
+		      [/filter]
+		      [effect]
+            apply_to=attack
+            range=melee
+            increase_damage=2
+          [/effect]
+		    [/object]
+      [/case]
+    [/switch]
+    {CLEAR_VARIABLE strength}
+  [/event]
+  
+  [event]
     name=last breath
     [filter]
       id=apprentice
@@ -327,9 +403,35 @@
       side=3
       amount=500
     [/gold]
+    {SET_TERRAIN 4 18 Ce}
+    {SET_TERRAIN 4 19 Ce}
+    {SET_TERRAIN 4 20 Ce}
+    {SET_TERRAIN 8 18 Ce}
+    {SET_TERRAIN 8 19 Ce}
+    {SET_TERRAIN 8 20 Ce}
     [message]
       speaker=necro
       message=_"It seems gods of darkness are with me tonight. Ha ha."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"There are too many of them here. We cannot handle them."
+    [/message]
+    [message]
+      speaker=Lemyr
+      message=_"Let me fight them. They will fall down before my sword and lance."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"No! They will kill you for sure."
+    [/message]
+    [message]
+      speaker=Lemyr
+      message=_"Do not worry about me. The lords of light watch over me."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"Very well. (whispers) He is a true paladin but this is mad. He has no chance against this undead horde. Alas I cannot stop him."
     [/message]
     {UNMAKE_HERO Lemyr}
     [unit_overlay]
@@ -339,7 +441,7 @@
     [objectives]
 			side=1
 			[objective]
-				description= _ "Survive as long as you can"
+				description= _ "Death of Lemyr"
 				condition=win
 			[/objective]
 			[objective]
@@ -350,9 +452,6 @@
 		    description= _ "Death of Amiwen, Merrisa or Tinry"
 		    condition=lose
 	    [/objective]
-      [note]
-        description=_"Attack with Lemyr and do not care about his wounds"
-      [/note]
 			[gold_carryover]
         bonus=yes
 				carryover_percentage=40
@@ -565,3 +664,4 @@
 [/scenario]
 
 #undef RAISE_ZOMBIE
+#undef SET_TERRAIN
