wescamp.py: Update from add-on server

--- a/For_Power/_main.cfg
+++ b/For_Power/_main.cfg
@@ -19,12 +19,27 @@
     [/entry]
   [/about]
   [about]
+    title= _ "Portrait and sprite for Clare:"
+    [entry]
+      name="Dugi"
+    [/entry]
+  [/about]
+  [about]
     title= _ "Text revision:"
     [entry]
       name="Flameslash"
     [/entry]
     [entry]
       name="Dugi"
+    [/entry]
+  [/about]
+  [about]
+    title= _ "Improving maps in first chapter:"
+    [entry]
+      name="bumbadadabum"
+    [/entry]
+    [entry]
+      name="Paulomat4"
     [/entry]
   [/about]
 #enddef
@@ -73,7 +88,7 @@
   difficulty_descriptions=_"&units/human-magi/mage+female-attack-magic1.png=Tourist;*&units/human-magi/red-mage+female-attack-magic-1.png=Traveller;&units/human-magi/arch-mage+female-attack-magic-1.png=Adventurer"
   
   icon=data/add-ons/For_Power/images/bookshelf-full.png
-	image=data/add-ons/For_Power/images/magesilverfemale.png
+	image=data/add-ons/For_Power/images/portraits/Clare.png
 	description=_ "After a few years of peace the troubles returned to the Northlands. But it only started a chain of events what affected all known parts of the Great Continent. Join Clare and her friends and watch it with you own eyes."
 
 	first_scenario=01_End_of_peace
