--- a/For_Power/mainline-strings.cfg
+++ b/For_Power/mainline-strings.cfg
@@ -47,6 +47,10 @@ _ "gossamer"
 _ "faerie fire"
 #enddef
 
+#define STR_SHADOW_WAVE
+_ "shadow wave"
+#enddef
+
 #textdomain wesnoth-help
 
 #define ILLUMINATES_DESCRIPTION
