--- a/For_Power/scenarios/15b_The_Poison.cfg
+++ b/For_Power/scenarios/15b_The_Poison.cfg
@@ -366,4 +366,11 @@
 	  [/message]
 	  {DEFEAT}
 	[/event]
+  
+  {ANIMATED_CAMPFIRE 14 1}
+  {ANIMATED_CAMPFIRE 19 2}
+  {ANIMATED_CAMPFIRE 13 3}
+  {ANIMATED_CAMPFIRE 18 3}
+  {ANIMATED_CAMPFIRE 15 5}
+  {ANIMATED_CAMPFIRE 17 5}
 [/scenario]
