--- a/For_Power/scenarios2/01_Return_of_troubles.cfg
+++ b/For_Power/scenarios2/01_Return_of_troubles.cfg
@@ -112,6 +112,7 @@
           variable=transfer_store.unit
           find_vacant=no
         [/unstore_unit]
+        {MODIFY_UNIT id=Clare profile portraits/Clare.png}
         {VARIABLE i 1}
         [while]
           [variable]
