--- a/For_Power/scenarios3/02_More_undeads.cfg
+++ b/For_Power/scenarios3/02_More_undeads.cfg
@@ -32,6 +32,7 @@
   {EXTRA_SCENARIO_MUSIC frantic.ogg}
   {EXTRA_SCENARIO_MUSIC suspense.ogg}
 	{STORY2}
+	victory_when_enemies_defeated=no
 	{DEFAULT_SCHEDULE}
   
 	[side]
@@ -427,7 +428,7 @@
     [/message]
     [message]
       speaker=Lemyr
-      message=_"Do not worry about me. The lords of light watch over me."
+      message=_"Do not worry about me. The Lords of Light watch over me."
     [/message]
     [message]
       speaker=Clare
