--- a/For_Power/scenarios3/03_Meeting_with_Ravanal.cfg
+++ b/For_Power/scenarios3/03_Meeting_with_Ravanal.cfg
@@ -11,6 +11,7 @@
   {EXTRA_SCENARIO_MUSIC knolls.ogg}
   {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
 	{STORY3}
+	victory_when_enemies_defeated=no
 	{AFTERNOON}
   
 	[side]
