--- a/For_Power/units/Clare_Lich.cfg
+++ b/For_Power/units/Clare_Lich.cfg
@@ -5,8 +5,8 @@
   name= _ "female^Preserved Lich"
   race=undead
   gender=female
-  image="units/human-magi/silver-mage+female.png"
-  profile="portraits/humans/mage-silver+female.png"
+  image="units/clare.png"
+  profile="portraits/Clare.png"
   {MAGENTA_IS_THE_TEAM_COLOR}
   hitpoints=70
   movement_type=smallfoot
@@ -66,19 +66,19 @@
     [frame]
       begin=-250
       end=-200
-      image="units/human-magi/silver-mage+female.png"
+      image="units/clare.png"
     [/frame]
     [frame]
       begin=-200
       end=-100
-      image="units/human-magi/silver-mage+female-attack-staff1.png"
+      image="units/clare-attack-staff1.png"
     [/frame]
     [if]
       hits=yes
       [frame]
         begin=-100
         end=100
-        image="units/human-magi/silver-mage+female-attack-staff2.png"
+        image="units/clare-attack-staff2.png"
         sound=staff.wav
       [/frame]
     [/if]
@@ -87,19 +87,19 @@
       [frame]
         begin=-100
         end=100
-        image="units/human-magi/silver-mage+female-attack-staff2.png"
+        image="units/clare-attack-staff2.png"
         sound={SOUND_LIST:MISS}
       [/frame]
     [/else]
     [frame]
       begin=100
       end=175
-      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      image="units/clare-attack-magic1.png"
     [/frame]
     [frame]
       begin=175
       end=250
-      image="units/human-magi/silver-mage+female.png"
+      image="units/clare.png"
     [/frame]
   [/attack_anim]
   [attack_anim]
@@ -110,23 +110,23 @@
     {MAGIC_MISSILE 14 -23}
     {MAGIC_MISSILE_STAFF_FLARE -750 600 14 -23}
     [frame]
-      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      image="units/clare-attack-magic1.png"
     [/frame]
     [frame]
-      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      image="units/clare-attack-magic2.png"
     [/frame]
     [if]
       [frame]
-        image="units/human-magi/silver-mage+female-attack-magic2.png"
+        image="units/clare-attack-magic2.png"
       [/frame]
     [/if]
     [else]
       [frame]
-        image="units/human-magi/silver-mage+female-attack-magic2.png"
+        image="units/clare-attack-magic2.png"
       [/frame]
     [/else]
     [frame]
-      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      image="units/clare-attack-magic1.png"
     [/frame]
   [/attack_anim]
   [attack_anim]
@@ -144,35 +144,35 @@
     [frame]
       begin=-450
       end=-375
-      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      image="units/clare-attack-magic1.png"
       halo=halo/elven/nature-halo1.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-375
       end=-300
-      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      image="units/clare-attack-magic2.png"
       halo=halo/elven/nature-halo2.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-300
       end=-225
-      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      image="units/clare-attack-magic2.png"
       halo=halo/elven/nature-halo3.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-225
       end=-150
-      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      image="units/clare-attack-magic2.png"
       halo=halo/elven/nature-halo4.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-150
       end=-75
-      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      image="units/clare-attack-magic2.png"
       halo=halo/elven/nature-halo5.png
       halo_x,halo_y=0,-28
     [/frame]
@@ -180,7 +180,7 @@
     [frame]
       begin=-75
       end=0
-      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      image="units/clare-attack-magic2.png"
       halo=halo/elven/nature-halo6.png
       sound=entangle.wav
       halo_x,halo_y=0,-28
@@ -188,14 +188,14 @@
     [frame]
       begin=-0
       end=75
-      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      image="units/clare-attack-magic2.png"
       halo=halo/elven/nature-halo7.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=75
       end=150
-      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      image="units/clare-attack-magic1.png"
       halo=halo/elven/nature-halo8.png
       halo_x,halo_y=0,-28
     [/frame]
@@ -213,12 +213,12 @@
 		[frame]
 			begin=-300
 			end=-150
-			image="units/human-magi/silver-mage+female.png"
+			image="units/clare.png"
 		[/frame]
 		[frame]
 			begin=-150
 			end=-75
-			image="units/human-magi/silver-mage+female.png"
+			image="units/clare.png"
 			halo=halo/undead/black-magic-1.png
 		[/frame]
 		[if]
@@ -226,7 +226,7 @@
 			[frame]
 				begin=-75
 				end=0
-				image="units/human-magi/silver-mage+female-attack-magic1.png"
+				image="units/clare-attack-magic1.png"
 				sound=magic-dark.ogg
 				halo=halo/undead/black-magic-2.png
 			[/frame]
@@ -236,7 +236,7 @@
 			[frame]
 				begin=-75
 				end=0
-				image="units/human-magi/silver-mage+female-attack-magic1.png"
+				image="units/clare-attack-magic1.png"
 				sound=magic-dark-miss.ogg
 				halo=halo/undead/black-magic-2.png
 			[/frame]
@@ -244,25 +244,25 @@
 		[frame]
 			begin=0
 			end=75
-			image="units/human-magi/silver-mage+female-attack-magic2.png"
+			image="units/clare-attack-magic2.png"
 			halo=halo/undead/black-magic-3.png
 		[/frame]
 		[frame]
 			begin=75
 			end=150
-			image="units/human-magi/silver-mage+female-attack-magic1.png"
+			image="units/clare-attack-magic1.png"
 			halo=halo/undead/black-magic-4.png
 		[/frame]
 		[frame]
 			begin=150
 			end=200
-			image="units/human-magi/silver-mage+female.png"
+			image="units/clare.png"
 			halo=halo/undead/black-magic-5.png
 		[/frame]
 		[frame]
 			begin=200
 			end=300
-			image="units/human-magi/silver-mage+female.png"
+			image="units/clare.png"
 		[/frame]
 	[/attack_anim]
   [attack_anim]
@@ -275,7 +275,7 @@
       [frame]
         begin=-450
         end=-375
-        image="units/human-magi/silver-mage+female-attack-magic1.png"
+        image="units/clare-attack-magic1.png"
         sound=magic-faeriefire.ogg
         halo=halo/elven/faerie-fire-halo1.png
         halo_x,halo_y=0,-28
@@ -286,7 +286,7 @@
       [frame]
         begin=-450
         end=-375
-        image="units/human-magi/silver-mage+female-attack-magic1.png"
+        image="units/clare-attack-magic1.png"
         sound=magic-faeriefire-miss.ogg
         halo=halo/elven/faerie-fire-halo1.png
         halo_x,halo_y=0,-28
@@ -295,42 +295,42 @@
     [frame]
       begin=-375
       end=-300
-      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      image="units/clare-attack-magic1.png"
       halo=halo/elven/faerie-fire-halo2.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-300
       end=-225
-      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      image="units/clare-attack-magic2.png"
       halo=halo/elven/faerie-fire-halo3.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-225
       end=-150
-      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      image="units/clare-attack-magic2.png"
       halo=halo/elven/faerie-fire-halo4.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-150
       end=-75
-      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      image="units/clare-attack-magic1.png"
       halo=halo/elven/faerie-fire-halo5.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-75
       end=0
-      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      image="units/clare-attack-magic1.png"
       halo=halo/elven/faerie-fire-halo6.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-0
       end=75
-      image="units/human-magi/silver-mage+female.png"
+      image="units/clare.png"
       halo=halo/elven/faerie-fire-halo7.png
       halo_x,halo_y=0,-28
     [/frame]
@@ -1007,7 +1007,7 @@
 		  number=3
 		  type=arcane
 		  name=shadow wave
-		  description= _"shadow wave"
+		  description={STR_SHADOW_WAVE}
 		  icon=attacks/dark-missile.png
 		  range=ranged
 		  [specials]
