--- a/For_Power/scenarios3/05_Dealing_with_trolls.cfg
+++ b/For_Power/scenarios3/05_Dealing_with_trolls.cfg
@@ -56,7 +56,7 @@
     
     shroud=yes
     
-		gold=150
+		gold=135
 		income=0
 	[/side]
 	
@@ -70,13 +70,14 @@
 	  id=troll
     generate_name=yes
 	  canrecruit=yes
+    experience=42
     [variables]
       unredeemable=yes
     [/variables]
     
-    recruit=Troll Whelp
+    recruit=Troll Whelp,Troll
 	  
-	  {GOLD 100 115 130}
+	  {GOLD 160 175 190}
 	  {INCOME -2 -2 -1}
 	[/side]
   
@@ -297,16 +298,7 @@
       message=_"It seems that they had a treasure here. Let us take it."
     [/message]
     {MOVE_UNIT id=Clare $trolls_leader_store.x $trolls_leader_store.y}
-    [message]
-      speaker=narrator
-      message= _ "You retrieve 75 pieces of gold."
-      image=wesnoth-icon.png
-      sound=gold.ogg
-    [/message]
-    [gold]
-      side=1
-      amount=75
-    [/gold]
+    {LOOT 75 1}
     {CLEAR_VARIABLE trolls_leader_store}
     [endlevel]
 		  result=victory
