--- a/For_Power/utils3/misc.cfg
+++ b/For_Power/utils3/misc.cfg
@@ -17,3 +17,19 @@
     id=Ravanal
   [/recall]
 #enddef
+
+#define LOOT AMOUNT SIDE
+  {VARIABLE amount_gold {AMOUNT}}
+  [message]
+    side_for={SIDE}
+    speaker=narrator
+    message= _ "You retrieve $amount_gold pieces of gold."
+    image=wesnoth-icon.png
+    sound=gold.ogg
+  [/message]
+  {CLEAR_VARIABLE amount_gold}
+  [gold]
+    side={SIDE}
+    amount={AMOUNT}
+  [/gold]
+#enddef
