wescamp.py: Update from add-on server

--- a/For_Power/scenarios3/Epilogue.cfg
+++ b/For_Power/scenarios3/Epilogue.cfg
@@ -64,6 +64,18 @@
     [/set_variables]
     [store_unit]
       [filter]
+        id=Lemyr
+      [/filter]
+      variable=Lemyr_store
+      kill=yes
+    [/store_unit]
+    [set_variables]
+      name=transfer_store.unit[$transfer_store.unit.length]
+      to_variable=Lemyr_store
+      mode=replace
+    [/set_variables]
+    [store_unit]
+      [filter]
         side=1
         [not]
           id=Clare
